# ollama-bench

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: CLAUDE_CODE_INSTRUCTIONS.md  DEVELOPMENT_SPEC.md  FILE_STRUCTURE.md  TASK_CHECKLIST.md
src/: benchmark.rs  cli.rs  config.rs  error.rs  main.rs  ollama.rs  output.rs  progress.rs  runner.rs  types.rs
